@@ -17,6 +17,9 @@ RELEASE 0.07 - Thu, 25 Apr 2002 06:24:50 -0500
   - Don't create a directory Node when a file already exists there,
     and vice versa.
 
+  - Add 'dirs' and 'names' keyword arguments to SConscript for
+    easier specification of subsidiary SConscript files.
+
   From Charles Crain:
 
   - Internal cleanup of environment passing to function Actions.
